--- a/package/crds/nodepool.tencentcloud.jet.crossplane.io_nodepools.yaml
+++ b/package/crds/nodepool.tencentcloud.jet.crossplane.io_nodepools.yaml
@@ -186,6 +186,32 @@ spec:
                           items:
                             type: string
                           type: array
+                        securityGroupIdsRefs:
+                          items:
+                            description: A Reference to a named object.
+                            properties:
+                              name:
+                                description: Name of the referenced object.
+                                type: string
+                            required:
+                            - name
+                            type: object
+                          type: array
+                        securityGroupIdsSelector:
+                          description: A Selector selects an object.
+                          properties:
+                            matchControllerRef:
+                              description: MatchControllerRef ensures an object with
+                                the same controller reference as the selecting object
+                                is selected.
+                              type: boolean
+                            matchLabels:
+                              additionalProperties:
+                                type: string
+                              description: MatchLabels ensures an object with matching
+                                labels is selected.
+                              type: object
+                          type: object
                         spotInstanceType:
                           description: 'Type of spot instance, only support `one-time`
                             now. Note: it only works when instance_charge_type is
@@ -362,7 +388,12 @@ spec:
                       created, and the method of destroying the instance will still
                       be used for shrinking).
                     type: string
-                  subnetIdRefs:
+                  subnetIds:
+                    description: ID list of subnet, and for VPC it is required.
+                    items:
+                      type: string
+                    type: array
+                  subnetIdsRefs:
                     items:
                       description: A Reference to a named object.
                       properties:
@@ -373,7 +404,7 @@ spec:
                       - name
                       type: object
                     type: array
-                  subnetIdSelector:
+                  subnetIdsSelector:
                     description: A Selector selects an object.
                     properties:
                       matchControllerRef:
@@ -387,11 +418,6 @@ spec:
                           is selected.
                         type: object
                     type: object
-                  subnetIds:
-                    description: ID list of subnet, and for VPC it is required.
-                    items:
-                      type: string
-                    type: array
                   taints:
                     description: Taints of kubernetes node pool created nodes.
                     items:
