--- a/package/crds/routetableentry.tencentcloud.jet.crossplane.io_tableentries.yaml
+++ b/package/crds/routetableentry.tencentcloud.jet.crossplane.io_tableentries.yaml
@@ -5,18 +5,18 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
-  name: subnets.subnet.tencentcloud.jet.crossplane.io
+  name: tableentries.routetableentry.tencentcloud.jet.crossplane.io
 spec:
-  group: subnet.tencentcloud.jet.crossplane.io
+  group: routetableentry.tencentcloud.jet.crossplane.io
   names:
     categories:
     - crossplane
     - managed
     - tencentcloudjet
-    kind: Subnet
-    listKind: SubnetList
-    plural: subnets
-    singular: subnet
+    kind: TableEntry
+    listKind: TableEntryList
+    plural: tableentries
+    singular: tableentry
   scope: Cluster
   versions:
   - additionalPrinterColumns:
@@ -35,7 +35,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Subnet is the Schema for the Subnets API
+        description: TableEntry is the Schema for the TableEntrys API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -50,7 +50,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: SubnetSpec defines the desired state of Subnet
+            description: TableEntrySpec defines the desired state of TableEntry
             properties:
               deletionPolicy:
                 default: Delete
@@ -63,23 +63,25 @@ spec:
                 type: string
               forProvider:
                 properties:
-                  availabilityZone:
-                    description: The availability zone within which the subnet should
-                      be created.
+                  description:
+                    description: Description of the routing table entry.
                     type: string
-                  cidrBlock:
-                    description: A network address block of the subnet.
+                  destinationCidrBlock:
+                    description: Destination address block.
                     type: string
-                  isMulticast:
-                    description: Indicates whether multicast is enabled. The default
-                      value is 'true'.
+                  disabled:
+                    description: Whether the entry is disabled, default is `false`.
                     type: boolean
-                  name:
-                    description: The name of subnet to be created.
+                  nextHub:
+                    description: 'ID of next-hop gateway. Note: when `next_type` is
+                      EIP, GatewayId should be `0`.'
+                    type: string
+                  nextType:
+                    description: 'Type of next-hop. Valid values: `CVM`, `VPN`, `DIRECTCONNECT`,
+                      `PEERCONNECTION`, `SSLVPN`, `NAT`, `NORMAL_CVM`, `EIP` and `CCN`.'
                     type: string
                   routeTableId:
-                    description: ID of a routing table to which the subnet should
-                      be associated.
+                    description: ID of routing table to which this entry belongs.
                     type: string
                   routeTableIdRefs:
                     description: A Reference to a named object.
@@ -104,41 +106,10 @@ spec:
                           is selected.
                         type: object
                     type: object
-                  tags:
-                    additionalProperties:
-                      type: string
-                    description: Tags of the subnet.
-                    type: object
-                  vpcId:
-                    description: ID of the VPC to be associated.
-                    type: string
-                  vpcIdRefs:
-                    description: A Reference to a named object.
-                    properties:
-                      name:
-                        description: Name of the referenced object.
-                        type: string
-                    required:
-                    - name
-                    type: object
-                  vpcIdSelector:
-                    description: A Selector selects an object.
-                    properties:
-                      matchControllerRef:
-                        description: MatchControllerRef ensures an object with the
-                          same controller reference as the selecting object is selected.
-                        type: boolean
-                      matchLabels:
-                        additionalProperties:
-                          type: string
-                        description: MatchLabels ensures an object with matching labels
-                          is selected.
-                        type: object
-                    type: object
                 required:
-                - availabilityZone
-                - cidrBlock
-                - name
+                - destinationCidrBlock
+                - nextHub
+                - nextType
                 type: object
               providerConfigRef:
                 default:
@@ -237,18 +208,12 @@ spec:
             - forProvider
             type: object
           status:
-            description: SubnetStatus defines the observed state of Subnet.
+            description: TableEntryStatus defines the observed state of TableEntry.
             properties:
               atProvider:
                 properties:
-                  availableIpCount:
-                    type: number
-                  createTime:
-                    type: string
                   id:
                     type: string
-                  isDefault:
-                    type: boolean
                 type: object
               conditions:
                 description: Conditions of the resource.
