--- a/.golangci.yml
+++ b/.golangci.yml
@@ -35,10 +35,10 @@ linters-settings:
     # simplify code: gofmt with `-s` option, true by default
     simplify: true
 
-  goimports:
-    # put imports beginning with prefix after 3rd-party packages;
-    # it's a comma-separated list of prefixes
-    local-prefixes: github.com/crossplane-contrib/provider-jet-template
+#  goimports:
+#    # put imports beginning with prefix after 3rd-party packages;
+#    # it's a comma-separated list of prefixes
+#    local-prefixes: github.com/crossplane-contrib/provider-jet-template
 
   gocyclo:
     # minimal code complexity to report, 30 by default (but we recommend 10-20)
