--- a/examples/nodepool/nodepool.yaml
+++ b/examples/nodepool/nodepool.yaml
@@ -15,7 +15,7 @@ spec:
       matchLabels:
         provider: crossplane-provider-jet-tencentcloud
         app: test
-    subnetIdSelector:
+    subnetIdsSelector:
       matchLabels:
         provider: crossplane-provider-jet-tencentcloud
         app: test
