--- a/examples/kubernetes/cluster.yaml
+++ b/examples/kubernetes/cluster.yaml
@@ -60,7 +60,7 @@ spec:
 #      matchLabels:
 #        provider: crossplane-provider-jet-tencentcloud
 #        app: test
-#    subnetIdSelector:
+#    subnetIdsSelector:
 #      matchLabels:
 #        provider: crossplane-provider-jet-tencentcloud
 #        app: test
