add cluster_intranet_subnet_id reference

--- a/package/crds/kubernetes.tencentcloud.jet.crossplane.io_clusters.yaml
+++ b/package/crds/kubernetes.tencentcloud.jet.crossplane.io_clusters.yaml
@@ -178,6 +178,29 @@ spec:
                       this field must and can only set  when `cluster_intranet` is
                       true. `cluster_intranet_subnet_id` can not modify once be set.
                     type: string
+                  clusterIntranetSubnetIdRefs:
+                    description: A Reference to a named object.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  clusterIntranetSubnetIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                   clusterIpvs:
                     description: Indicates whether `ipvs` is enabled. Default is true.
                       False means `iptables` is enabled.
