--- a/examples/kubernetes/cluster.yaml
+++ b/examples/kubernetes/cluster.yaml
@@ -1,10 +1,7 @@
----
 apiVersion: kubernetes.tencentcloud.jet.crossplane.io/v1alpha1
 kind: Cluster
 metadata:
   name: test-cluster-crossplane
-  annotations:
-    provider: crossplane
   labels:
     provider: crossplane-provider-jet-tencentcloud
     app: test
@@ -20,79 +17,63 @@ spec:
     clusterInternet: false
     clusterCidr: 172.16.0.0/16
     clusterVersion: 1.22.5
-    vpcIdSelector:
+    vpcId: vpc-s1ei2nia
+---
+apiVersion: nodepool.tencentcloud.jet.crossplane.io/v1alpha1
+kind: NodePool
+metadata:
+  name: test-nodepool
+spec:
+  forProvider:
+    name: test-nodepool-crossplane
+    clusterIdSelector:
       matchLabels:
         provider: crossplane-provider-jet-tencentcloud
         app: test
-#    clusterIntranet: true
-#    clusterIntranetSubnetId: subnet-o7750sfv
-    #status:
-#  connectionDetails: kubeconfig
-#    workerConfig:
-#    - availabilityZone: ap-beijing-5
-#      count: 1
-#      instanceName: cluster-instance01
-#      instanceType: SA2.2XLARGE16
-#      systemDiskType: CLOUD_SSD
-#      systemDiskSize: 50
-#      subnetIdSelector:
-#        matchLabels:
-#          provider: crossplane-provider-jet-tencentcloud
-#          app: test
-#      imgId: img-rkiynh11
-#      enhancedMonitorService: False
-#      enhancedSecurityService: False
-#      userData: dXNlcgo=
-#      passwordSecretRef:
-#        key: password
-#        name: test-cluster
-#        namespace: crossplane-system
-#      dataDisk:
-#      - diskType: CLOUD_PREMIUM
-#        diskSize: 50
+    maxSize: 5
+    minSize: 1
+    vpcId: vpc-s1ei2nia
+    subnetIdsSelector:
+      matchLabels:
+        provider: crossplane-provider-jet-tencentcloud
+        app: test
+    retryPolicy: INCREMENTAL_INTERVALS
+    enableAutoScale: true
+    deleteKeepInstance: false
+    autoScalingConfig:
+      - instanceType: SA2.2XLARGE16
+        systemDiskType: CLOUD_PREMIUM
+        systemDiskSize: 50
+        enhancedMonitorService: False
+        enhancedSecurityService: False
+        publicIpAssigned: false
+        securityGroupIds:
+          - sg-09c6ckwj
+        passwordSecretRef:
+          key: password
+          name: test-cluster
+          namespace: crossplane-system
+        dataDisk:
+          - diskType: CLOUD_PREMIUM
+            diskSize: 50
+            deleteWithInstance: true
+---
+apiVersion: clusterendpoint.tencentcloud.jet.crossplane.io/v1alpha1
+kind: ClusterEndpoint
+metadata:
+  name: test-clusterendpoint
+spec:
+  forProvider:
+    clusterIdSelector:
+      matchLabels:
+        provider: crossplane-provider-jet-tencentcloud
+        app: test
+    clusterIntranet: true
+    clusterIntranetSubnetIdSelector:
+      matchLabels:
+        provider: crossplane-provider-jet-tencentcloud
+        app: test
 
-#---
-#apiVersion: nodepool.tencentcloud.jet.crossplane.io/v1alpha1
-#kind: NodePool
-#metadata:
-#  name: test-nodepool
-#spec:
-#  forProvider:
-#    name: test-nodepool-crossplane
-#    clusterIdSelector:
-#      matchLabels:
-#        provider: crossplane-provider-jet-tencentcloud
-#        app: test
-#    maxSize: 5
-#    minSize: 1
-#    vpcIdSelector:
-#      matchLabels:
-#        provider: crossplane-provider-jet-tencentcloud
-#        app: test
-#    subnetIdsSelector:
-#      matchLabels:
-#        provider: crossplane-provider-jet-tencentcloud
-#        app: test
-#    retryPolicy: INCREMENTAL_INTERVALS
-#    enableAutoScale: true
-#    deleteKeepInstance: false
-#    autoScalingConfig:
-#      - instanceType: SA2.2XLARGE16
-#        systemDiskType: CLOUD_PREMIUM
-#        systemDiskSize: 50
-#        enhancedMonitorService: False
-#        enhancedSecurityService: False
-#        publicIpAssigned: false
-#        securityGroupIds:
-#          - sg-09c6ckwj
-#        passwordSecretRef:
-#          key: password
-#          name: test-cluster
-#          namespace: crossplane-system
-#        dataDisk:
-#          - diskType: CLOUD_PREMIUM
-#            diskSize: 50
-#            deleteWithInstance: true
 
 
 
