--- a/examples/subnet/subnet.yaml
+++ b/examples/subnet/subnet.yaml
@@ -8,9 +8,6 @@ metadata:
 spec:
   forProvider:
     availabilityZone: ap-beijing-5
-    cidrBlock: 10.2.11.0/24
+    cidrBlock: 10.10.15.0/24
     name: test-crossplane-subnet1
-    vpcIdSelector:
-      matchLabels:
-        provider: crossplane-provider-jet-tencentcloud
-        app: test
+    vpcId: vpc-s1ei2nia
